# PyHDX

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  ChangeLog  DESCRIPTION.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _requirements.py  cli.py  codecov.yml  dependabot.yml  environment.yml  installation.txt  mkdocs.yml  py38_linux.yml  pyproject.toml  pyrightconfig.json  readthedocs.yml  requirements-base-conda.txt  requirements-base.txt  requirements-conda.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: lint.yml  pin_requirements.yml  pypi_main.yml  pypi_publish.yml  pypi_test.yml  pytest.yml  test.yml
HDExaminer_examples/: all_results.csv  uptake_summary.csv
dev/: IDOMtestfile.py  JSTestFile  NGLinPanel.py  bokeh_extension.py  delayed_wt_avg_fit.py  dev_fitting.py  dev_kinetics_panel_graph.py  environment.yml  example.py  extractValue.py  full_fine_fitting.py  global_fitting.py  html_button.py  html_button_model.py  markdowntest.py  matplotlib_mwe.ipynb  ngl_view_mwe.py  package-list.txt  soleIDOMtest.py  split_problems.py  temp_seca_full.pick  temp_seca_section.pick  test_lilyfile.py
dev/expfact/: run_expfact.py  test.pfact  view_result.py
dev/gui/: dev_errorbar_overlay_app.py  dev_gui_SecB.ipynb  dev_gui_folding.py  dev_gui_matrix.py  dev_gui_rfu.py  dev_gui_secB.py  dev_gui_secB_diff.py  dev_gui_secB_single.py  dev_gui_simulated.py  dev_mwe_app.py  dev_rfu_app.py  errorbar_app.yaml  mwe_app.yaml  mwe_coverage.py  ngl_view_mwe.py  readme  rfu_headless.py
docs/: GUI_autodoc.rst  Makefile  _docs_notes.md  citing.md  citing.rst  conf.py  configuration.md  examples.rst  fitting.rst  gen_ref_pages.py  guidelines.txt  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  make.bat  modules.rst  requirements.txt  sphinx_requirements.txt  usage.rst  using_the_GUI.rst  web_app.md  web_app.rst  web_app_autodoc.rst
docs/bk/: conf.py
docs/css/: style.css
docs/examples/: 01_basic_usage.ipynb  02_coverage_and_d_uptake_fit.ipynb  02_coverage_objects.ipynb  03_Fitting.ipynb  03_blocks_and_fitting.ipynb  03_fitting.ipynb  04_advanced_fitting.ipynb  04_exporting_output.ipynb  04_plot_output.ipynb
docs/figures/: fitting_blocks.py  fitting_overfitting.py  fr_orig.npy
docs_bk/: citing.rst  conf.py  examples.rst  fitting.rst  guidelines.txt  introduction.rst  modules.rst  paramdoc.py  refs.bib  web_app.rst
docs_bk/examples/: 02_coverage_and_d_uptake_fit.ipynb  04_plot_output.ipynb
docs_bk/figures/: fitting_overfitting.py  fr_red.npy
examples/: 01_basic_usage.ipynb  01_fileIO_and_controls.ipynb  03_blocks_and_fitting.ipynb  create_synthetic_data.py  load_and_controls.py  load_sec_result.py  secA_example.ipynb
examples/SecB/: SecB_Apo_fd_fit1.pick  SecB_Apo_fd_fit1.txt  SecB_Apo_fd_fit2.pick  SecB_Apo_fd_fit2.txt  ecSecB apo.csv
images/: pyhdx_inverted_button.afdesign
pyhdx/: __init__.py  __version__.py  _version.py  _versioneer.py  alignment.py  batch_processing.py  cli.py  config.ini  config.py  config.yaml  convert_data.py  datasets.py  fileIO.py  fit_models.py  fitting.py  fitting_tf.py  fitting_torch.py  hdexaminer_to_pyhdx.py  legacy.py  local_cluster.py  math.py  models.py  output.py  paramdoc.py  plot.py  process.py  pyhdx.py  requirements_docs.txt  simulate.py  support.py  tol_colors.py
pyhdx/exPfact/: README  calc_dpred.pyx  calc_dpred_python.py  calculate.py  clean_pfact.py  constants.py  exPfact.py  from_config.py  iso.py  kint.py  pfact2dpred.py  read.py  setup_calc_dpred.py  write.py
pyhdx/expfact/: AUTHOR  kint.py
pyhdx/expfact_kint/: AUTHOR  kint.py
pyhdx/panel/: HDX_kinetics_pipeline.ipynb  __init__.py  apps.py  base.py  compare_app.py  components.py  config.ini  config.py  configurations.py  controller.py  controllers.py  dark.css  data_sources.py  dev_templates.py  fig_panels.py  filters.py  golden.html  golden_config.html  hdx_panel.ipynb  jinja_base.html  log.py  main.py  (+19 more)
requirements/: req-web.txt  requirements-macOS-latest-3.9.txt  requirements-macos-latest-3.10.txt  requirements-macos-latest-3.11.txt  requirements-macos-latest-3.12.txt  requirements-ubuntu-latest-3.10.txt  requirements-ubuntu-latest-3.11.txt  requirements-ubuntu-latest-3.12.txt  requirements-ubuntu-latest-3.13.txt  requirements-ubuntu-latest-3.9.txt  requirements-windows-latest-3.10.txt  requirements-windows-latest-3.11.txt  requirements-windows-latest-3.12.txt  requirements-windows-latest-3.13.txt  requirements-windows-latest-3.9.txt
tasks/: __init__.py  test.py
templates/: 01_load_secb_data.py  01_load_secb_data_template.py  01a_load_from_spec.py  01a_load_ppix_data.py  02_guesses_from_yaml.py  02_load_from_yaml.py  03_SecB_fit_d_uptake.py  03_SecB_load_and_fit.py  03_initial_guesses.py  04_SecB_batch_fit.py  04_SecB_batch_fit_and_checkpoint.py  04_SecB_fit_d_uptake.py  05_SecB_aligned_fit.py  05_SecB_fit_dG.py  06_fitting_with_logs.py  07_SecB_aligned_fit.py  07_load_fitresult.py  08_fit_report_pdf.py  08_load_fitresult.py  09_figure_output.ipynb  09_figure_output.py  09_plot_output.py  10_individual_plots.py  11_load_fitresult_web.py  12_jobfiles.py  SecB_aligned_fit.py  SecB_batch_async.py  SecB_batch_fit.py  SecB_fit_async.py  SecB_load_and_fit.py  batch_fit_config.yaml  fitting_with_logs.py  guesses_from_yaml.py  load_from_yaml.py  load_secb_data_template.py  mwe_targets.py
tests/: check_test_fit_result.py  dev_gui_SecB.ipynb  dev_gui_clean.py  dev_gui_matrix.py  dev_gui_secB.py  dev_gui_secB_diff.py  dev_gui_secB_single.py  dev_gui_simulated.py  dev_secB_fit.py  gen_data.py  gen_docs_example_result.py  gen_secB_testfit_files.py  gen_testfit_files.py  generate_test_fit_results.py  load_ds1_template.py  load_gen_data_template.py  load_secb_data_template.py  temp_gen_testdata.py  test_batchprocessing.py  test_config.py  test_datasets.py  test_fileIO.py  test_fitting.py  test_gui.py  test_lumen_components.py  test_models.py  test_pyhdx.py  test_support.py  test_templates.py
(+214 files in other folders)
