[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pyhdx"
description = "Derive ΔG for single residues from HDX-MS data"
authors = [
  { name = "Jochem Smit", email = "jhsmit@gmail.com" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch",
    "hdxrate",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-image",
    "scipy",
    "symfit",
    "tqdm",
    "typer",
    "dask",
    "distributed",
    "packaging",
    "param",
    "pyyaml",
    "omegaconf",
    "hdxms-datasets>=0.1.3",
]
dynamic = ["version"]

[project.optional-dependencies]
web = ["panel<1.0.0", "bokeh", "holoviews", "colorcet", "hvplot", "proplot", "param<2"]
pdf = ["pylatex", "proplot"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pygments", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-jupyter"]
dev = ["black[jupyter]"]
test = [
    "pytest>=7.2.0",
]

[project.scripts]
pyhdx = 'pyhdx.cli:app'

[project.urls]
Source = "https://github.com/Jhsmit/PyHDX/"
Documentation = "https://pyhdx.readthedocs.io/en/stable/"

[tool.hatch.build]
exclude = [
    "_versioneer.py"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyhdx/_version.py"

[tool.flake8]
max-line-length = 100
ignore = "D203"
exclude = [".git", "__pycache__", "build", "dist", "docs"]
max-complexity = 10

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"