[metadata]
name = PyHDX
author = Jochem H. Smit
author-email = jhsmit@gmail.com
maintainer = Jochem H. Smit
maintainer-email = jhsmit@gmail.com
url = https://github.com/Jhsmit/PyHDX
license = MIT
license_files = LICENSE
description = Derive ΔG for single residues from HDX-MS data
long_description = file: DESCRIPTION.rst
summary = Derive ΔG for single residues from HDX-MS data
keywords = HDX-MS
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
install_requires =
    hdxrate>=0.2.0
    numpy
    matplotlib
    pandas
    scikit-image
    scipy
    symfit
    sympy==1.5.1
    torch
    tqdm
    dask
    distributed
    packaging
python_requires =
    >=3.7

[options.entry_points]
console_scripts =
    pyhdx = pyhdx.cli:main


[options.extras_require]
web =
    panel>=0.12.4
    bokeh
    param
    holoviews
    colorcet >= 0.3.0
    hvplot
    proplot==0.9.3
    pyyaml
pdf =
    pylatex
    proplot==0.9.3
docs =
    sphinx>=3.2.1
    ipykernel
    numpydoc
    nbsphinx
    param
    sphinx_rtd_theme
    docutils==0.16
    sphinx_copybutton
pymol =
    pymol-open-source



[versioneer]
VCS = git
style = pep440-pre
versionfile_source = pyhdx/_version.py
versionfile_build = pyhdx/_version.py
tag_prefix = ''

