[metadata]
name = PyHDX
author = Jochem H. Smit
author_email = jhsmit@gmail.com
maintainer = Jochem H. Smit
maintainer_email = jhsmit@gmail.com
url = https://github.com/Jhsmit/PyHDX
license = MIT
license_files = LICENSE
description = Derive ΔG for single residues from HDX-MS data
long_description = file: DESCRIPTION.rst
summary = Derive ΔG for single residues from HDX-MS data
keywords = HDX-MS
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
install_requires =
    hdxrate>=0.2.0
    numpy
    matplotlib==3.4.3
    pandas
    scikit-image
    scipy
    symfit>=0.5.5
    torch
    tqdm
    typer
    dask
    distributed
    packaging
    param

python_requires =
    >=3.8

[options.entry_points]
console_scripts =
    pyhdx = pyhdx.cli:app


[options.extras_require]
web =
    panel>=0.13.0
    bokeh
    holoviews
    colorcet >= 3.0.0
    hvplot
    proplot==0.9.3
    pyyaml
pdf =
    pylatex
    proplot==0.9.3
docs =
    sphinx>=4.4.0
    ipykernel
    nbsphinx
    furo
    sphinx-copybutton
    sphinx-autodoc-typehints
pymol =
    pymol-open-source
dev =
    bandit
    black
    invoke
    mypy
    pylint
    pytest
    flake8


[versioneer]
VCS = git
style = pep440-pre
versionfile_source = pyhdx/_version.py
versionfile_build = pyhdx/_version.py
tag_prefix = ''

[flake8]
ignore = D203
exclude = .git,__pycache__,docs/conf.py,dev,build,dist
max-complexity = 10